crates/vite_task_bin/tests/e2e_snapshots/fixtures/ctrl-c/snapshots/ctrl-c prevents future tasks.snap
---
source: crates/vite_task_bin/tests/e2e_snapshots/main.rs
expression: e2e_outputs
---
> vt run -r --no-cache dev
@ expect-milestone: ready
~/packages/a$ vtt exit-on-ctrlc ⊘ cache disabled
@ write-key: ctrl-c
~/packages/a$ vtt exit-on-ctrlc ⊘ cache disabled
ctrl-c received
