crates/vite_task_bin/tests/e2e_snapshots/fixtures/ctrl-c/snapshots/ctrl-c terminates running tasks (cached).snap
---
source: crates/vite_task_bin/tests/e2e_snapshots/main.rs
expression: e2e_outputs
---
> vt run dev-cached
@ expect-milestone: ready
$ vtt exit-on-ctrlc
@ write-key: ctrl-c
$ vtt exit-on-ctrlc
ctrl-c received
