crates/vite_task_bin/tests/e2e_snapshots/fixtures/ctrl-c/snapshots/ctrl-c terminates running tasks (labeled).snap
---
source: crates/vite_task_bin/tests/e2e_snapshots/main.rs
expression: e2e_outputs
---
> vt run --log=labeled dev
@ expect-milestone: ready
[ctrl-c-test#dev] $ vtt exit-on-ctrlc ⊘ cache disabled
[ctrl-c-test#dev] 
@ write-key: ctrl-c
[ctrl-c-test#dev] $ vtt exit-on-ctrlc ⊘ cache disabled
[ctrl-c-test#dev] 

[ctrl-c-test#dev] ctrl-c received
