crates/vite_task_bin/tests/e2e_snapshots/fixtures/ctrl-c/snapshots/ctrl-c terminates running tasks.snap
---
source: crates/vite_task_bin/tests/e2e_snapshots/main.rs
expression: e2e_outputs
---
> vt run -r dev
@ expect-milestone: ready
~/packages/a$ vtt exit-on-ctrlc ⊘ cache disabled
~/packages/b$ vtt exit-on-ctrlc ⊘ cache disabled
@ expect-milestone: ready
~/packages/a$ vtt exit-on-ctrlc ⊘ cache disabled
~/packages/b$ vtt exit-on-ctrlc ⊘ cache disabled
@ write-key: ctrl-c
~/packages/a$ vtt exit-on-ctrlc ⊘ cache disabled
~/packages/b$ vtt exit-on-ctrlc ⊘ cache disabled
ctrl-c received

---
vt run: 0/2 cache hit (0%). (Run `vt run --last-details` for full details)
